Small fix on padding top on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,6 @@ small{
   .App-header {
     padding-left: 1%;
     padding-right: 1%;
-    padding-top: 35%;
   }
   .search-box{
     width: 100%;
